namespaces/media/ombi/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ext
  annotations:
    kubernetes.io/ingress.class: internet
    external-dns.alpha.kubernetes.io/ttl: "120"
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  tls:
  - hosts:
    - ombi.devmode.cloud
    secretName: tls-ombi.devmode.cloud
  rules:
  - host: ombi.devmode.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: srv
          servicePort: http
